kubernetes/lecture-1/02-pod-simple.yaml
kind: Pod
apiVersion: v1
metadata:
  name: mypod
  namespace: test
spec:
  containers:
  - name: mypod
    image: yaroslavperf/gb-k8s-lecture-1
