kubernetes/lecture-1/03-pod-limits-and-env.yaml
kind: Pod
apiVersion: v1
metadata:
  name: mypod
  namespace: test
spec:
  containers:
  - name: mypod
    image: yaroslavperf/gb-k8s-lecture-1:1.0
    resources:
      limits:
        cpu: "1"
        memory: 1024Mi
      requests:
        cpu: "0.5"
        memory: 512Mi
