kubernetes/lecture-1/04-pod-with-labels.yaml
kind: Pod
apiVersion: v1
metadata:
  name: mypod
  namespace: test
  labels:
    app: myapp
spec:
  containers:
  - name: mypod
    image: yaroslavperf/gb-k8s-lecture-1:1.0
    resources:
      limits:
        cpu: "0.2"
        memory: 100Mi
      requests:
        cpu: "0.1"
        memory: 50Mi
