kubernetes/lecture-1/06-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
  namespace: test
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: mypod
          image: yaroslavperf/gb-k8s-lecture-1:1.0
          resources:
            limits:
              cpu: "0.2"
              memory: 100Mi
            requests:
              cpu: "0.1"
              memory: 50Mi
