kubernetes/lecture-1/16-deployment-liveness-probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
  namespace: test
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: mypod
          image: yaroslavperf/gb-k8s-lecture-1:1.0
          resources:
            limits:
              cpu: "0.2"
              memory: 100Mi
            requests:
              cpu: "0.1"
              memory: 50Mi
          livenessProbe:
            httpGet:
              path: /api
              port: 80
              httpHeaders:
              - name: Authorization
                value: abc123
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 7
          volumeMounts:
          - name: geekbrains
            mountPath: "/etc/geekbrains"
            readOnly: true
          - name: config
            mountPath: "/config"
            readOnly: true
          - name: data
            mountPath: "/data"
      volumes:
      - name: geekbrains
        secret:
          secretName: mysecret
          items:
          - key: username
            path: username
      - name: config
        configMap:
          name: myconfigmap
          items:
          - key: config.yaml
            path: config.yaml
      - name: data
        persistentVolumeClaim:
          claimName: myclaim
