kubernetes/lecture-1/05-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: test
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
