kubernetes/lecture-1/14-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment-db
  namespace: test
spec:
  selector:
    matchLabels:
      app: mydb
  replicas: 1
  template:
    metadata:
      labels:
        app: mydb
    spec:
      containers:
        - name: mypod
          image: postgres
          resources:
            limits:
              cpu: "0.2"
              memory: 100Mi
            requests:
              cpu: "0.1"
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: myservice-db
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: mydb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
